--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "life-itself",
-  "homepage": "https://jpino7.github.io/My-Portfolio/",
+  "homepage": "https://jpino7.github.io/life-itself/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
